# segformer-multitask

./: .gitignore  README.md  pyproject.toml
configs/: folder_dual_decoder.json  folder_dual_head.json  folder_single_task.json
src/: __init__.py  backbones.py  configs.py  datasets.py  decoders.py  defaults.py  evaluate.py  heads.py  logs.py  losses.py  metrics.py  models.py  train.py  types.py  utils.py  weighting.py
src/segformer_multitask/: __init__.py  backbones.py  decoders.py  heads.py  losses.py  models.py  types.py  weighting.py
tests/: test_backbones.py  test_configs.py  test_datasets.py  test_decoder.py  test_heads.py  test_logs.py  test_losses.py  test_metrics.py  test_models.py  test_smoke.py  test_train_entrypoint.py  test_train_real.py
