[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segformer-multitask"
version = "0.1.0"
description = "SegFormer multitask research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
