[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segformer-multitask"
version = "0.1.0"
description = "SegFormer multitask research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pillow>=10.3",
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.scripts]
segformer-multitask-train = "src.train:main"
segformer-multitask-evaluate = "src.evaluate:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
